--- a/public/index.html
+++ b/public/index.html
@@ -405,23 +405,24 @@
             }
             
             console.log('[Login] Registering token with backend...');
-            const response = await fetch('https://alertachart-backend-production.up.railway.app/api/push/register', {
-              method: 'POST',
+            const { CapacitorHttp } = window.Capacitor.Plugins;
+            const httpResponse = await CapacitorHttp.post({
+              url: 'https://alertachart-backend-production.up.railway.app/api/push/register',
               headers: { 'Content-Type': 'application/json' },
-              body: JSON.stringify({
+              data: {
                 token: token.value,
                 platform: platform,
                 deviceId: deviceId,
                 model: model,
                 osVersion: osVersion,
                 appVersion: '1.0.0',
-              }),
+              },
             });
             
-            if (response.ok) {
-              console.log('[Login] ✅ Token registered with backend');
+            if (httpResponse.status === 200) {
+              console.log('[Login] ✅ Token registered with backend:', httpResponse.data);
             } else {
-              console.error('[Login] Failed to register token:', await response.text());
+              console.error('[Login] Failed to register token:', httpResponse.data);
             }
           } catch (error) {
             console.error('[Login] Error registering token:', error);
