🔥 FIX: Re-register push token after login with cookies!
CRITICAL FIX for device registration:
- Created /api/push/register Next.js API route (forwards cookies)
- pushNotificationService now uses Next.js API route (with cookies)
- Added reRegisterAfterLogin() method to re-register token after login
- public/index.html saves FCM token to localStorage
- app/page.tsx calls reRegisterAfterLogin() when user logs in

The issue was:
- Push token registered before login (user_id = null)
- After login, device not linked to user account
- Backend couldn't find user devices for alarm notifications

Changes:
- Next.js API route forwards cookies to backend
- Login triggers token re-registration with cookies
- Device now linked to user account after login

--- a/public/index.html
+++ b/public/index.html
@@ -392,6 +392,10 @@
         PushNotifications.addListener('registration', async (token) => {
           console.log('[Login] ✅ FCM Token received:', token.value);
           
+          // 🔥 STORE TOKEN IN LOCALSTORAGE (for remote app to re-register after login)
+          localStorage.setItem('fcm_token', token.value);
+          console.log('[Login] ✅ FCM Token saved to localStorage');
+          
           // Register token with backend
           try {
             // Get device info (should work in local context)
