--- a/public/index.html
+++ b/public/index.html
@@ -943,29 +943,47 @@
           console.log('[Login] ℹ️ No saved email in localStorage, but attempting session restore anyway (cookies may exist)...');
         }
 
-        // Always try to restore - cookies will be sent automatically if they exist
-        // Use full URL since we're in capacitor://localhost
-        const response = await fetch('https://alertachart.com/api/auth/restore-session', {
-          method: 'POST',
-          credentials: 'include', // 🔥 CRITICAL: Include cookies (will work if cookies exist in WKWebsiteDataStore)
-        });
+        // Always try to restore - use CapacitorHttp since fetch doesn't work from capacitor://localhost
+        // CapacitorHttp automatically includes cookies from WKWebsiteDataStore
+        const CapacitorHttp = window.Capacitor?.Plugins?.CapacitorHttp;
+        
+        if (!CapacitorHttp) {
+          console.log('[Login] ⚠️ CapacitorHttp not available, skipping session restore');
+          return;
+        }
 
-        if (response.ok) {
-          const result = await response.json();
-          console.log('[Login] ✅ Session restored successfully:', result);
+        try {
+          const httpResponse = await CapacitorHttp.post({
+            url: 'https://alertachart.com/api/auth/restore-session',
+            headers: {
+              'Content-Type': 'application/json',
+            },
+            data: {},
+          });
 
-          // Save email to localStorage for future checks (if not already saved)
-          if (result.user?.email && !savedEmail) {
-            localStorage.setItem('user_email', result.user.email);
-            console.log('[Login] ✅ User email saved to localStorage for future checks');
+          if (httpResponse.status === 200) {
+            const result = httpResponse.data;
+            console.log('[Login] ✅ Session restored successfully:', result);
+
+            // Save email to localStorage for future checks (if not already saved)
+            if (result.user?.email && !savedEmail) {
+              localStorage.setItem('user_email', result.user.email);
+              console.log('[Login] ✅ User email saved to localStorage for future checks');
+            }
+
+            // Redirect to home page - session will be active there
+            console.log('[Login] 🔄 Redirecting to home page...');
+            window.location.href = 'https://alertachart.com/';
+          } else {
+            const error = httpResponse.data || { error: 'Unknown error' };
+            console.log('[Login] ⚠️ Session restore failed:', error);
+            // Clear saved email if restore failed
+            if (savedEmail) {
+              localStorage.removeItem('user_email');
+            }
           }
-
-          // Redirect to home page - session will be active there
-          console.log('[Login] 🔄 Redirecting to home page...');
-          window.location.href = '/';
-        } else {
-          const error = await response.json().catch(() => ({ error: 'Unknown error' }));
-          console.log('[Login] ⚠️ Session restore failed:', error);
+        } catch (httpError) {
+          console.log('[Login] ⚠️ Session restore failed (HTTP error):', httpError);
           // Clear saved email if restore failed
           if (savedEmail) {
             localStorage.removeItem('user_email');
