--- a/public/urunlerimiz/aggr/index.html
+++ b/public/urunlerimiz/aggr/index.html
@@ -735,6 +735,71 @@
             border-color: var(--primary);
             transform: translateY(-2px);
         }
+        /* Mobile Navigation */
+        .mobile-nav {
+            position: fixed;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            height: 64px;
+            background: #0f0f0f;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+            display: none;
+            z-index: 9999;
+            padding-bottom: env(safe-area-inset-bottom);
+        }
+
+        @media (max-width: 1024px) {
+            .mobile-nav {
+                display: flex;
+            }
+            body {
+                padding-bottom: 80px; 
+            }
+        }
+
+        .nav-item {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 0.5rem 0;
+            color: #6b7280;
+            text-decoration: none;
+            transition: all 0.2s;
+            position: relative;
+            background: transparent;
+            border: none;
+        }
+
+        .nav-item:hover, .nav-item:focus {
+            color: #9ca3af;
+        }
+
+        .nav-item.active {
+            color: #60a5fa;
+        }
+
+        .nav-icon {
+            width: 24px;
+            height: 24px;
+            margin-bottom: 2px;
+            transition: transform 0.2s;
+        }
+        
+        .nav-item.active .nav-icon {
+             transform: scale(1.1);
+        }
+
+        .nav-item:active .nav-icon {
+            transform: scale(0.95);
+        }
+
+        .nav-label {
+            font-size: 10px;
+            font-weight: 500;
+        }
     </style>
 </head>
 
@@ -748,14 +813,7 @@
     <!-- Watermark Icon -->
     <img src="icon.png" alt="" class="watermark">
 
-    <!-- Back Button -->
-    <button onclick="history.back()"
-        style="position: fixed; top: 60px; left: 20px; z-index: 100; padding: 10px 16px; background: rgba(0,0,0,0.7); backdrop-filter: blur(10px); border: 1px solid rgba(255,255,255,0.1); border-radius: 12px; color: white; font-size: 14px; font-weight: 500; cursor: pointer; display: flex; align-items: center; gap: 8px; transition: all 0.3s ease;">
-        <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7" />
-        </svg>
-        Geri
-    </button>
+
 
     <!-- Hero Section -->
     <section class="hero">
@@ -1490,6 +1548,37 @@
             });
         });
     </script>
+    <!-- Mobile Navigation -->
+    <nav class="mobile-nav">
+        <a href="/?tab=chart" class="nav-item">
+            <svg class="nav-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z" /></svg>
+            <span class="nav-label">Chart</span>
+        </a>
+        <a href="/?tab=watchlist" class="nav-item">
+            <svg class="nav-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 10h16M4 14h16M4 18h16" /></svg>
+            <span class="nav-label">Watchlist</span>
+        </a>
+        <a href="/?tab=alerts" class="nav-item">
+            <svg class="nav-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V5a2 2 0 10-4 0v.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9" /></svg>
+            <span class="nav-label">Alarmlar</span>
+        </a>
+        <a href="/?tab=aggr" class="nav-item active">
+             <svg class="nav-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 12l3-3 3 3 4-4M8 21l4-4 4 4M3 4h18M4 4h16v12a1 1 0 01-1 1H5a1 1 0 01-1-1V4z" /></svg>
+            <span class="nav-label">Aggr</span>
+        </a>
+        <a href="/?tab=liquidations" class="nav-item">
+            <svg class="nav-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 7h8m0 0v8m0-8l-8 8-4-4-6 6" /></svg>
+            <span class="nav-label">Liq</span>
+        </a>
+        <a href="/?tab=exchange" class="nav-item">
+            <svg class="nav-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 6l3 1m0 0l-3 9a5.002 5.002 0 006.001 0M6 7l3 9M6 7l6-2m6 2l3-1m-3 1l-3 9a5.002 5.002 0 006.001 0M18 7l3 9m-3-9l-6-2m0-2v2m0 16V5m0 16H9m3 0h3" /></svg>
+            <span class="nav-label">Borsalar</span>
+        </a>
+        <a href="/?tab=settings" class="nav-item">
+            <svg class="nav-icon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
+            <span class="nav-label">Ayarlar</span>
+        </a>
+    </nav>
 </body>
 
 </html>
